syntax = "proto3";

option go_package = "central";

import "storage/deployment.proto";

package central;

message DeploymentEnhancementMessage{
    string id = 1;
    string namespace = 2;
    storage.Deployment deployment = 3;
}

message DeploymentEnhancementRequest{
    DeploymentEnhancementMessage deployment = 1;
}

message DeploymentEnhancementResponse{
    DeploymentEnhancementMessage deployment = 1;
}
